--- a/html cities.html
+++ b/html cities.html
@@ -53,6 +53,8 @@
             <li>tenali</li>
             <li>nandyal</li>
             </ol>
+        <p> Click here to view answer 2 </p>
+    <p><a href="https://github.com/meghanasiddu23/webtech-activity-3/image.html">ques2</a></p>
             </body>
             </html>
 
