--- a/image.html
+++ b/image.html
@@ -8,5 +8,7 @@
    <a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSRhoFZ8xjSZ0jwjuayrJBcoPOWFZGH6pTwmQ&usqp=CAU">
       <img alt="images!!!" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJuXUCDkV2Zq4DOi924V_xdnkljZCNOxjWvg&usqp=CAU" width=300" height="200">
    </a>
+   <p> Click here to view answer 3 </p>
+    <p><a href="https://github.com/meghanasiddu23/webtech-activity-3/lorem.html">ques2</a></p>
 </body>
 </html>
