--- a/lorem.html
+++ b/lorem.html
@@ -78,6 +78,8 @@
                 </tr>
         </table>
         </div>
+        <p> Click here to view answer 4 </p>
+    <p><a href="https://github.com/meghanasiddu23/webtech-activity-3/4%20ques.html">ques4</a></p>
 
 
     </body>
